# granular

./: .$Granular.drawio.bkp  .gitignore  Cargo.toml  Granular.drawio  README.md
examples/testbed/: Cargo.toml
examples/testbed/src/: main.rs
granular-core/: Cargo.toml
granular-core/src/: eventloop_system.rs  filewatcher.rs  input_system.rs  lib.rs  tick.rs  utils.rs
granular-core/src/assets/: holder.rs  mod.rs  shader_asset.rs  texture_asset.rs
granular-core/src/graphics/: batchrenderer.rs  camera.rs  cmd_encoder.rs  dynamic_buffer.rs  fwd_renderer.rs  gpu.rs  gpu_backend.rs  graphics_backend.rs  graphics_system.rs  mod.rs  renderer.rs  renderer2d.rs  simulation_renderer.rs  swapchain_system.rs  texture_bundle.rs  window_system.rs
granular-core/src/simulation/: cell.rs  chunk.rs  grid.rs  material.rs  mod.rs
shaders/: base.wgsl  batch_renderer.wgsl  frag.glsl  fragment.frag  sim_renderer.wgsl  vert.glsl  vertex.vert
src/: lib.rs  main.rs
tracy traces/: 27-01-26.tracy
