[package]
name = "granular-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geese.workspace = true
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["glsl"]}
winit.workspace = true
log.workspace = true
pollster.workspace = true
notify = "6.1.1"
bytemuck = "1.14.0"
ultraviolet = "0.9.2"
bytemuck_derive = "1.5.0"
image = "0.24.8"
