[package]
name = "granular-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geese.workspace = true
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["glsl"] }
winit.workspace = true
log.workspace = true
palette.workspace = true
notify = "6.1.1"
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
image = "0.24.8"
rustc-hash = "1.1.0"
anyhow = "1.0.79"
glam = { version = "0.25.0", features = ["approx", "bytemuck"] }
pollster = "0.3.0"
rayon = "1.11"
