[package]
name = "granular-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geese.workspace = true
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["glsl"] }
winit.workspace = true
log.workspace = true
palette.workspace = true
notify = "6.1.1"
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
image = "0.24.8"
rustc-hash = "1.1.0"
anyhow = "1.0.79"
glam = { version = "0.25.0", features = ["approx", "bytemuck"] }
pollster = "0.3.0"
rayon = "1.11"
tracing = "0.1.44"

tracing-subscriber = { version = "0.3.22", optional = true, features = [
    "env-filter",
] }
tracing-tracy = { version = "0.11.4", optional = true }
# ==== Tracy 13.1 ====
# tracy-client = { version = "0.18.4", optional = true }
#tracy-client-sys = { version = "0.28.0", optional = true }


[features]
default = ["trace"]
trace = ["dep:tracing-tracy", "dep:tracing-subscriber"]
